@@ -54,7 +54,8 @@ Version 1.5.11:
      listbox no longer changes the position of the horizontal scrollbar
    * Added experimental new addon download dialog (Only available when
      starting with --new-widgets.)
-   * Fix a broken reference to the Myrmidon portrait	 
+   * Fix a broken reference to the Myrmidon portrait.
+   * Removed team_name checks for chat display.
  * WML Engine:
    * Fixed bug #13024: Conditional [allow_undo] not always working right
    * Map size is now hard-limited to 200 by 200
